--- a/britannia.css
+++ b/britannia.css
@@ -6,6 +6,7 @@
 body{
     margin:0;
     font-family:"Arial";
+    overflow-x: hidden;
 }
 .leftside{
     width:386px;
@@ -78,6 +79,27 @@ body{
         height:1031px;
         background: lightpink;
     }
+    .button{
+        width: 26px;
+        height:25px;
+        margin-left: 100px;
+        margin-top:276px;
+        background:red;
+        padding: 10px;
+    }
+    .socialmedia{
+        width:300px;
+        height:200px;
+    }
+    .imgset{
+        width: 37px;
+        height:34px;
+    }
+    .up{
+
+        width:20px;
+        height:23px;
+    }
     .home{
         width:100%;
         height:617px;
@@ -123,6 +145,9 @@ body{
         margin-left: auto;
         margin-right: auto;
         padding-top: 45px;
+    }
+    .socialmedia{
+
     }
     .copyright{
         width:1103px;
